Com cidade e estado

--- a/client/views/mcd.html
+++ b/client/views/mcd.html
@@ -1,23 +1,26 @@
 <head>
-    <title>mcd</title>
+    <title>Troca de selos do MCD</title>
+    <script type="text/javascript" src="http://cidades-estados-js.googlecode.com/files/cidades-estados-1.2-utf8.js"></script>
 </head>
 
 <body>
     <div class="container">
-
         {{> template}}
-        <!-- Begin BidVertiser code -->
-         {{#constant}}
-<SCRIPT LANGUAGE="JavaScript1.1" SRC="http://bdv.bidvertiser.com/BidVertiser.dbm?pid=526217&bid=1311528" type="text/javascript"></SCRIPT>
-<noscript><a href="http://www.bidvertiser.com/bdv/BidVertiser/bdv_xml_feed.dbm">xml search</a></noscript>
-{{/constant}}
-<!-- End BidVertiser code -->
+        
+        <div class="alert alert-success" style="display: none;">
+		  <button type="button" class="close" data-dismiss="alert">&times;</button>
+		  <p></p>
+		</div>
+        {{#constant}}
+		<iframe src="/bidvertiser.html" style="width: 100%; overflow: hidden;" frameborder="0" scrolling="no"></iframe>
+		{{/constant}}
         {{#if currentUser}}
         {{> profile}}
+        <hr/>
         {{> people}}
         {{else}}
         <div class="hero-unit">
-            <p>Utilizando este site você poderá achar outras pessoas que precisam de números do MCD.</p>
+            <p>Utilizando este site você pode procurar por pessoas que tenham o selo que você precisa e compartilhar seus selos.</p>
         </div>
         {{/if}}
     </div>
@@ -40,7 +43,7 @@
 <template name="profile">
     <div>
         <p>
-            Procuro por estes selos:
+            Meus selos:
         </p>
         <ul>
             {{#each numbers}}
@@ -51,6 +54,31 @@
             </li>
             {{/each}}
         </ul>
+        <br/>
+		<form class="form-horizontal">
+			<fieldset>
+			<div class="control-group">
+			  <label class="control-label">Meu estado:</label>
+			  <div class="controls">
+			    <select id="state" name="state"></select> 
+			  </div>
+			</div>
+			
+			<div class="control-group">
+			  <label class="control-label">Minha cidade:</label>
+			  <div class="controls">
+			    <select id="city" name="city"></select>
+			  </div>
+			</div>
+			<div class="control-group">
+			  <div class="controls">
+			    <button id="save_location" name="save_location" class="btn btn-primary">Salvar</button>
+			  </div>
+			</div>
+			
+			</fieldset>
+		</form>
+
     </div>
 </template>
 
@@ -71,9 +99,12 @@
                 <li>
                 {{#with profile owner}}
                     <a href="https://www.facebook.com/{{this.uid}}" target="_blank"><h2><img src="http://graph.facebook.com/{{this.uid}}/picture?type=square" />{{this.name}}</h2></a>
+                    <p>Estado: {{this.state}} - Cidade: {{this.city}}</p>
                 {{/with}}
-                Quer trocar: {{numbers}}
+                <p>Tem os selos: {{numbers}}</p>
                 </li>
+            {{else}}
+                Ninguém cadastrado com esse selo.
             {{/each}}
         </ul>
     </div>
