--- a/client/views/mcd.html
+++ b/client/views/mcd.html
@@ -157,17 +157,45 @@
 	    	
 	        <ul>
 	            {{#each list}}
-	                <li>
-	                {{#with profile owner}}
-	                    <h2><img src="http://graph.facebook.com/{{this.uid}}/picture?type=square" /><a href="https://www.facebook.com/{{this.uid}}" target="_blank">{{this.name}}</a></h2>
-	                    <p>Estado: {{this.state}} - Cidade: {{this.city}}</p>
-	                {{/with}}
-	                <p>Tem os selos: {{numbers}}</p>
+	                <li id="{{owner}}">
+	                   {{#with profile owner}}
+	                       <h2><img src="http://graph.facebook.com/{{this.uid}}/picture?type=square" /><a href="https://www.facebook.com/{{this.uid}}" target="_blank">{{this.name}}</a></h2>
+	                       <p>Estado: {{this.state}} - Cidade: {{this.city}}</p>
+	                   {{/with}}
+	                   <p>Tem os selos: {{numbers}}</p>
+	                   <button id="send-msg" class="btn btn-primary">Enviar mensagem</button>
 	                </li>
 	            {{else}}
 	                Ninguém cadastrado com esse selo.
 	            {{/each}}
 	        </ul>
+	    </div>
+	</div>
+	
+	<div id="betaModal" class="modal hide fade">
+	    <div class="modal-header">
+	            <button class="close" data-dismiss="modal">×</button>
+	            <h3>Envie uma mensagem (beta)</h3>
+	    </div>
+		<div class="modal-body">
+		    <div class="row-fluid">
+		        <div class="span12">
+		            <div class="span10">
+		            <div class="logowrapper">
+		                <textarea cols="30" rows="15" style="width: 95%;"></textarea>
+		            </div>
+		            </div>
+		            <div class="span2">
+		                <form class="form-horizontal">
+		                    <div class="help-block">
+		                        <button type="submit" class="btn btn-large btn-info">Enviar</button>
+		                    </div>
+		                </form>
+		            </div>
+		        </div>
+		    </div>
+		</div>
+	    <div class="modal-footer">
 	    </div>
 	</div>
 </template>
