Arrumei algumas coisas

--- a/client/views/mcd.html
+++ b/client/views/mcd.html
@@ -163,7 +163,8 @@
 	                       <p>Estado: {{this.state}} - Cidade: {{this.city}}</p>
 	                   {{/with}}
 	                   <p>Tem os selos: {{numbers}}</p>
-	                   <button id="send-msg" class="btn btn-primary">Enviar mensagem</button>
+	                   <button class="btn btn-primary send-msg">Enviar mensagem</button>
+	                   <hr/>
 	                </li>
 	            {{else}}
 	                Ninguém cadastrado com esse selo.
