--- a/client/views/mcd.html
+++ b/client/views/mcd.html
@@ -21,7 +21,12 @@
 		    <p></p>
 		</div>
 		<div class="row">
-			<div class="span8 center">
+		    <div class="span2" style="height: 610px;">
+		        {{#constant}}
+                <iframe src="/bid_esquerda.html" style="height: 100%; overflow: hidden;" frameborder="0" scrolling="no"></iframe>
+		        {{/constant}}
+		    </div>
+			<div class="span8">
 		        {{#constant}}
 				<iframe src="/bidvertiser.html" style="width: 100%; overflow: hidden;" frameborder="0" scrolling="no"></iframe>
 				{{/constant}}
@@ -118,7 +123,7 @@
 
 <template name="people">
 	<div class="row">
-	    <div class="span4">
+	    <div class="span6">
 	        <h1>
 	            Procurar selos
 	        </h1>
